[gd_scene load_steps=5 format=3 uid="uid://ciubsoqne0anu"]

[ext_resource type="Script" path="res://Objects/Scripts/PartyMember.gd" id="1_t2p47"]
[ext_resource type="PackedScene" uid="uid://2sabk1qf7cl4" path="res://Objects/Components/StatComponent.tscn" id="1_vm0ts"]
[ext_resource type="PackedScene" uid="uid://cv6ldxepmuas5" path="res://Objects/Components/EquipmentComponent.tscn" id="2_cpuku"]
[ext_resource type="PackedScene" uid="uid://bya0ps2ufov22" path="res://Objects/Components/AbilityComponent.tscn" id="4_6v3ia"]

[node name="PartyMember" type="Node"]
script = ExtResource("1_t2p47")

[node name="StatComponent" parent="." node_paths=PackedStringArray("parent", "equipment") instance=ExtResource("1_vm0ts")]
parent = NodePath("..")
equipment = NodePath("../EquipmentComponent")

[node name="EquipmentComponent" parent="." instance=ExtResource("2_cpuku")]

[node name="AbilityComponent" parent="." node_paths=PackedStringArray("stats", "parent") instance=ExtResource("4_6v3ia")]
stats = NodePath("../StatComponent")
parent = NodePath("..")
